--- a/app/index.html
+++ b/app/index.html
@@ -35,14 +35,14 @@
         <em>Full stack developer</em>
       </p>
 
-      <ul class="slide z4 tabs header animated dur06 blurred">
+      <ul class="slide tabs header animated dur06 blurred">
         <li id="button-approach" class="button button-approach"><a href>Approach</a></li>
         <li id="button-tools" class="button button-tools"><a href>Tools</a></li>
         <li id="button-work" class="button button-work"><a href>Work</a></li>
       </ul>
 
       <div class="subject-wrapper">
-        <div id="approach" class="z3 subject approach">
+        <div id="approach" class="subject approach">
           <div class="topic">
             <div class="slide graphic">
               <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04"
@@ -79,24 +79,10 @@
 
             </div>
 
-            <div class="topic">
-              <div class="slide graphic">
-                <svg class="image header animated blurred dur06" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1"
-                  viewBox="0 0 706.1 706.1" fill="#DDE6E8">
-                  <g>
-                    <path
-                      d="M353.05 0c69.02,0 124.97,55.95 124.97,124.97 0,60.82 -43.88,112.89 -103.67,123.15l0 89.24 138.46 100.6c19.64,-12.85 43.11,-20.32 68.32,-20.32 69.02,0 124.97,55.96 124.97,124.97 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-28.16 9.31,-54.15 25.04,-75.05l-128.16 -93.11 -128.15 93.11c15.72,20.9 25.04,46.89 25.04,75.05 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-69.01 55.95,-124.97 124.96,-124.97 25.22,0 48.69,7.47 68.32,20.32l138.47 -100.6 0 -89.24c-59.8,-10.26 -103.67,-62.33 -103.67,-123.15 0,-69.02 55.95,-124.97 124.96,-124.97z" />
-                  </g>
-                </svg>
-              </div>
-
-            </div>
-
           </div>
         </div>
 
-        <div id="tools" class="z2 subject tools">
+        <div id="tools" class="subject tools">
           <div class="topic">
             <div class="slide graphic">
               <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="0 0 512 512" fill="#DDE6E8">
@@ -190,7 +176,7 @@
           </div>
         </div>
 
-        <div id="work" class="z1 subject work">
+        <div id="work" class="subject work">
           <div class="topic">
             <div class="slide graphic">
               <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="-3 -3 30 30" fill="#DDE6E8">
@@ -255,14 +241,38 @@
             </div>
           </div>
         </div>
+        <div class="small graphic">
+          <svg class="header animated blurred dur04" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" viewBox="0 0 706.1 706.1"
+            fill="#DDE6E8">
+            <g>
+              <path
+                d="M353.05 0c69.02,0 124.97,55.95 124.97,124.97 0,60.82 -43.88,112.89 -103.67,123.15l0 89.24 138.46 100.6c19.64,-12.85 43.11,-20.32 68.32,-20.32 69.02,0 124.97,55.96 124.97,124.97 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-28.16 9.31,-54.15 25.04,-75.05l-128.16 -93.11 -128.15 93.11c15.72,20.9 25.04,46.89 25.04,75.05 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-69.01 55.95,-124.97 124.96,-124.97 25.22,0 48.69,7.47 68.32,20.32l138.47 -100.6 0 -89.24c-59.8,-10.26 -103.67,-62.33 -103.67,-123.15 0,-69.02 55.95,-124.97 124.96,-124.97z" />
+            </g>
+          </svg>
+        </div>
+        <footer class="header animated dur06 blurred" style="z-index:2">
+
+          <p class="slide">Let's build something great togther.</p>
+
+          <div class="slide graphic">
+            <svg class="image header animated blurred dur06" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" viewBox="0 0 706.1 706.1"
+              fill="#DDE6E8">
+              <g>
+                <path
+                  d="M353.05 0c69.02,0 124.97,55.95 124.97,124.97 0,60.82 -43.88,112.89 -103.67,123.15l0 89.24 138.46 100.6c19.64,-12.85 43.11,-20.32 68.32,-20.32 69.02,0 124.97,55.96 124.97,124.97 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-28.16 9.31,-54.15 25.04,-75.05l-128.16 -93.11 -128.15 93.11c15.72,20.9 25.04,46.89 25.04,75.05 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-69.01 55.95,-124.97 124.96,-124.97 25.22,0 48.69,7.47 68.32,20.32l138.47 -100.6 0 -89.24c-59.8,-10.26 -103.67,-62.33 -103.67,-123.15 0,-69.02 55.95,-124.97 124.96,-124.97z" />
+              </g>
+            </svg>
+          </div>
+
+          <a class="slide mail" href="mailto:erik@mattheis.org">erik@mattheis.org</a>
+          <div class="slide">Saint Paul, MN</div>
+        </footer>
       </div>
-      <footer class="header animated dur06 blurred" style="z-index:2">
-        <p class="slide">Let's build something great togther.</p>
-        <a class="slide mail" href="mailto:erik@mattheis.org">erik@mattheis.org</a>
-        <div class="slide">Saint Paul, MN</div>
-      </footer>
     </div>
   </div>
+
 
   <script type="module" src="/main.js">
   </script>
