--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <meta name="description"
+    content="Erik Mattheis is a full stack developer with a passion for creating beautiful, functional websites and applications." />
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -20,22 +23,34 @@
     .blurred {
       filter: blur(60px);
     }
+
+    .nothing {
+      height: 100vh;
+    }
   </style>
 
   <title>Erik Mattheis | Web Developer | Saint Paul, MN</title>
+  <script src=" https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: ['Montserrat:400,700', 'Roboto:400,700']
+      }
+    });
+  </script>
 </head>
 
 <body>
   <div class="page">
     <div class="card">
 
-      <h1 class="slide header animated dur04 blurred">ERIK MATTHEIS</h1>
+      <h1 class="slide2 header animated dur04 blurred2">ERIK MATTHEIS</h1>
 
-      <p class="slide header animated dur04 blurred left">
+      <p class="slide2 header animated dur04 blurred2 left">
         <em>Full stack developer</em>
       </p>
 
-      <ul class="slide tabs header animated dur06 blurred">
+      <ul class="slide2 tabs header animated dur06 blurred2">
         <li id="button-approach" class="button button-approach"><a href>Approach</a></li>
         <li id="button-tools" class="button button-tools"><a href>Tools</a></li>
         <li id="button-work" class="button button-work"><a href>Work</a></li>
@@ -44,36 +59,36 @@
       <div class="subject-wrapper">
         <div id="approach" class="subject approach">
           <div class="topic">
-            <div class="slide graphic">
-              <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04"
+            <div class="slide2 graphic">
+              <svg class="image header animated blurred2 dur06" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04"
                 fill="#DDE6E8">
                 <path
                   d="M20.97 7.27a.996.996 0 000-1.41l-2.83-2.83a.996.996 0 00-1.41 0l-4.49 4.49-3.89-3.89c-.78-.78-2.05-.78-2.83 0l-1.9 1.9c-.78.78-.78 2.05 0 2.83l3.89 3.89L3 16.76V21h4.24l4.52-4.52 3.89 3.89c.95.95 2.23.6 2.83 0l1.9-1.9c.78-.78.78-2.05 0-2.83l-3.89-3.89 4.48-4.48zM5.04 6.94l1.89-1.9L8.2 6.31 7.02 7.5l1.41 1.41 1.19-1.19 1.2 1.2-1.9 1.9-3.88-3.88zm11.23 7.44l-1.19 1.19 1.41 1.41 1.19-1.19 1.27 1.27-1.9 1.9-3.89-3.89 1.9-1.9 1.21 1.21zM6.41 19H5v-1.41l9.61-9.61 1.3 1.3.11.11L6.41 19zm9.61-12.44l1.41-1.41 1.41 1.41-1.41 1.41-1.41-1.41z">
                 </path>
               </svg>
-              <h2 class="slide title header animated blurred dur08">Approach</h2>
+              <h2 class="slide2 title header animated blurred2 dur08">Approach</h2>
             </div>
 
             <div class="copy">
-              <p class="slide">Turning a challenge into something beautiful and functional excites me.</p>
+              <p class="slide2">Turning a challenge into something beautiful and functional excites me.</p>
 
-              <p class="slide">In the 90s, a web developer handled everything except running the server. If we could
+              <p class="slide2">In the 90s, a web developer handled everything except running the server. If we could
                 manage
                 shared hosting, we were deemed webmasters.</p>
 
-              <p class="slide">Now still, a full-stack developer oversees all aspects except server management. I've
+              <p class="slide2">Now still, a full-stack developer oversees all aspects except server management. I've
                 acquired
                 proficiency in DevOps, making me a contemporary Web Master.</p>
 
-              <p class="slide">My journey has seen me play diverse roles, including that of a Scrum Master. However, my
+              <p class="slide2">My journey has seen me play diverse roles, including that of a Scrum Master. However, my
                 true passion
                 lies in contributing to a small, dynamic team that transforms ideas into live productions.</p>
 
-              <p class="slide">While my coding pace is deliberate, I excel in swift troubleshooting and consistently
+              <p class="slide2">While my coding pace is deliberate, I excel in swift troubleshooting and consistently
                 deliver
                 solid results that prove highly effective.</p>
 
-              <p class="slide">Explore this portfolio showcasing recent solo projects. As we approach Spring 2024, I am
+              <p class="slide2">Explore this portfolio showcasing recent solo projects. As we approach Spring 2024, I am
                 actively
                 seeking opportunities to join a team or serve a new client.</p>
 
@@ -84,8 +99,8 @@
 
         <div id="tools" class="subject tools">
           <div class="topic">
-            <div class="slide graphic">
-              <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="0 0 512 512" fill="#DDE6E8">
+            <div class="slide2 graphic">
+              <svg class="image header animated blurred2 dur06" aria-hidden="true" viewBox="0 0 512 512" fill="#DDE6E8">
                 <path
                   d="M429.76 130.07L274.33 36.85a37 37 0 00-36.65 0L82.24 130.06A38.2 38.2 0 0064 162.83V349a38.26 38.26 0 0018.24 32.8L123 406.14l.23.13c20.58 10.53 28.46 10.53 37.59 10.53 32.14 0 52.11-20.8 52.11-54.29V182a8.51 8.51 0 00-8.42-8.58h-22.38a8.51 8.51 0 00-8.42 8.58v180.51a15 15 0 01-6.85 13.07c-5.9 3.6-14.47 2.84-24.14-2.15l-39.06-23.51a1.1 1.1 0 01-.48-.92V165.46a1.32 1.32 0 01.59-1.06l151.84-93a.82.82 0 01.73 0l151.93 93a1.34 1.34 0 01.55 1.1V349a1.28 1.28 0 01-.45 1l-152.06 90.65a1.22 1.22 0 01-.8 0l-38.83-23.06a7.8 7.8 0 00-7.83-.41l-.34.2c-10.72 6.35-13.6 8-23.54 11.62-1.62.59-5.43 2-5.76 5.77s3.29 6.45 6.51 8.32l51.9 31.87a35.67 35.67 0 0018.3 5.07h.58a35.87 35.87 0 0017.83-5.07l155.43-93.13A38.37 38.37 0 00448 349V162.83a38.21 38.21 0 00-18.24-32.76z">
                 </path>
@@ -96,79 +111,79 @@
               <h2 class="title">Tools</h2>
             </div>
             <div class="copy">
-              <p class="slide">Let's leverage the power of Artificial Intelligence and employ cutting-edge
+              <p class="slide2">Let's leverage the power of Artificial Intelligence and employ cutting-edge
                 technologies and tools to enhance and simplify projects. In these projects I use:</p>
 
               <ul>
                 <li>Frontend
                   <ul>
-                    <li class="slide">ES2021</li>
-                    <li class="slide">Vue</li>
-                    <li class="slide">BootstrapJS, BootstrapVue</li>
-                    <li class="slide">HTML5, CSS3</li>
-                    <li class="slide">Liquid</li>
+                    <li class="slide2">ES2021</li>
+                    <li class="slide2">Vue</li>
+                    <li class="slide2">BootstrapJS, BootstrapVue</li>
+                    <li class="slide2">HTML5, CSS3</li>
+                    <li class="slide2">Liquid</li>
                     <li class="dim">jQuery</li>
                     <li class="dim">AngularJS</li>
                   </ul>
                 </li>
                 <li>Backend
                   <ul>
-                    <li class="slide">Node</li>
-                    <li class="slide">NoSQL</li>
-                    <li class="slide">Nuxt</li>
-                    <li class="slide">SQL</li>
+                    <li class="slide2">Node</li>
+                    <li class="slide2">NoSQL</li>
+                    <li class="slide2">Nuxt</li>
+                    <li class="slide2">SQL</li>
                     <li class="dim">PHP/MySQL/Apache</li>
                     <li class="dim">Wordpress</li>
                   </ul>
                 </li>
                 <li>APIs
                   <ul>
-                    <li class="slide">Firebase</li>
-                    <li class="slide">Atlas</li>
-                    <li class="slide">OpenAI API</li>
-                    <li class="slide">Google Identity Services</li>
-                    <li class="slide">Google Ads API</li>
-                    <li class="slide">YouTube API</li>
-                    <li class="slide">Google Maps API</li>
-                    <li class="slide">Google Analytics API</li>
-                    <li class="slide">Google Books API</li>
-                    <li class="slide">Google Calendar API</li>
-                    <li class="slide">Google Drive API</li>
-                    <li class="slide">Google Sheets API</li>
-                    <li class="slide">Facebook</li>
-                    <li class="slide">MailChimp</li>
-                    <li class="slide">Print-on-demand</li>
-                    <li class="slide">REST</li>
-                    <li class="slide">Shopify Admin API</li>
-                    <li class="slide">Winston</li>
-                    <li class="slide">Passport</li>
-                    <li class="slide">Twitter API (X API v2)</li>
+                    <li class="slide2">Firebase</li>
+                    <li class="slide2">Atlas</li>
+                    <li class="slide2">OpenAI API</li>
+                    <li class="slide2">Google Identity Services</li>
+                    <li class="slide2">Google Ads API</li>
+                    <li class="slide2">YouTube API</li>
+                    <li class="slide2">Google Maps API</li>
+                    <li class="slide2">Google Analytics API</li>
+                    <li class="slide2">Google Books API</li>
+                    <li class="slide2">Google Calendar API</li>
+                    <li class="slide2">Google Drive API</li>
+                    <li class="slide2">Google Sheets API</li>
+                    <li class="slide2">Facebook</li>
+                    <li class="slide2">MailChimp</li>
+                    <li class="slide2">Print-on-demand</li>
+                    <li class="slide2">REST</li>
+                    <li class="slide2">Shopify Admin API</li>
+                    <li class="slide2">Winston</li>
+                    <li class="slide2">Passport</li>
+                    <li class="slide2">Twitter API (X API v2)</li>
                   </ul>
                 </li>
                 <li>AI
                   <ul>
-                    <li class="slide">OpenAI GPT</li>
-                    <li class="slide">OpenAI Dall-e</li>
-                    <li class="slide">Google Bard API</li>
-                    <li class="slide">Tesseract</li>
+                    <li class="slide2">OpenAI GPT</li>
+                    <li class="slide2">OpenAI Dall-e</li>
+                    <li class="slide2">Google Bard API</li>
+                    <li class="slide2">Tesseract</li>
                   </ul>
                 </li>
                 <li>DevOps
                   <ul>
-                    <li class="slide">Heroku</li>
-                    <li class="slide">Netlify</li>
-                    <li class="slide">Google Cloud</li>
-                    <li class="slide">AWS</li>
+                    <li class="slide2">Heroku</li>
+                    <li class="slide2">Netlify</li>
+                    <li class="slide2">Google Cloud</li>
+                    <li class="slide2">AWS</li>
                   </ul>
                 </li>
                 <li>Software<ul>
-                    <li class="slide">Photoshop/Illustrator</li>
-                    <li class="slide">VS Code</li>
-                    <li class="slide">Git</li>
-                    <li class="slide">Terminal</li>
-                    <li class="slide">Compass</li>
-                    <li class="slide">Postman</li>
-                    <li class="slide">Chrome Dev Tools</li>
+                    <li class="slide2">Photoshop/Illustrator</li>
+                    <li class="slide2">VS Code</li>
+                    <li class="slide2">Git</li>
+                    <li class="slide2">Terminal</li>
+                    <li class="slide2">Compass</li>
+                    <li class="slide2">Postman</li>
+                    <li class="slide2">Chrome Dev Tools</li>
                   </ul>
                 </li>
               </ul>
@@ -176,10 +191,12 @@
           </div>
         </div>
 
+        <div id="dummy" class="subject nothing active"></div>
+
         <div id="work" class="subject work">
           <div class="topic">
-            <div class="slide graphic">
-              <svg class="image header animated blurred dur06" aria-hidden="true" viewBox="-3 -3 30 30" fill="#DDE6E8">
+            <div class="slide2 graphic">
+              <svg class="image header animated blurred2 dur06" aria-hidden="true" viewBox="-3 -3 30 30" fill="#DDE6E8">
                 <path d=" M22.282 9.821a5.985 5.985 0 00-.516-4.91 6.046 6.046 0 00-6.51-2.9A6.065 6.065
                 0 004.981 4.18a5.985 5.985 0 00-3.998 2.9 6.046 6.046 0 00.743 7.097 5.98 5.98 0 00.51 4.911 6.051 6.051
                 0 006.515 2.9A5.985 5.985 0 0013.26 24a6.056 6.056 0 005.772-4.206 5.99 5.99 0 003.997-2.9 6.056 6.056 0
@@ -194,22 +211,22 @@
                 4.5 0 017.375-3.453l-.142.08-4.778 2.758a.795.795 0 00-.393.681zm1.097-2.365l2.602-1.5 2.607
                 1.5v2.999l-2.597 1.5-2.607-1.5z"></path>
               </svg>
-              <h2 class="slide title">Work</h2>
+              <h2 class="slide2 title">Work</h2>
             </div>
             <div class="topic">
-              <div class="slide section graphic">
+              <div class="slide2 section graphic">
                 <a href="https://articl.net/">
                   <img class="screenshot"
                     src="https://storage.cloud.google.com/mattheis-images/images/screenshots/articl.net.jpg"
                     alt="Articl.net" />
-                  <h3 class="slide title">Articl.net</h3>
+                  <h3 class="slide2 title">Articl.net</h3>
                 </a>
               </div>
               <div class="copy">
-                <p class="slide">A repository of radiological research and educational materials with a custom CMS and
+                <p class="slide2">A repository of radiological research and educational materials with a custom CMS and
                   document scraper.</p>
 
-                <p class="slide">Originally a WordPress blog, I took on the project to transform it into an <a
+                <p class="slide2">Originally a WordPress blog, I took on the project to transform it into an <a
                     class="text-link" href="https://articl.net/">AngularJS application</a> leveraging the WordPress REST
                   API. In winter and spring 2024, we are incorporating additional features and transitioned it to Vue,
                   supported by a custom API implemented in Node/Express/MongoDB. You can find the respective
@@ -222,24 +239,25 @@
               </div>
             </div>
             <div class="topic">
-              <div class="slide section graphic">
+              <div class="slide2 section graphic">
                 <a href="https://naturallyhued.com/">
                   <img class="screenshot"
                     src="https://storage.cloud.google.com/mattheis-images/images/screenshots/naturally-hued.jpg"
                     alt="Naturally Hued" />
-                  <h3 class="slide title">Natrally Hued</h3>
+                  <h3 class="slide2 title">Natrally Hued</h3>
                 </a>
               </div>
               <div class="copy">
-                <p class="slide">As part of a self-directed initiative, I undertook a project aimed at refining my AI
+                <p class="slide2">As part of a self-directed initiative, I undertook a project aimed at refining my AI
                   and design proficiencies. The content is created by GPT3.5 and Dall-e 2. Administrators can directly
                   edit the content and direct the AI in making revisions.</p>
               </div>
             </div>
           </div>
         </div>
+
         <div class="small graphic">
-          <svg class="header animated blurred dur04" xmlns="http://www.w3.org/2000/svg"
+          <svg class="header animated blurred2 dur04" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" viewBox="0 0 706.1 706.1"
             fill="#DDE6E8">
             <g>
@@ -248,31 +266,19 @@
             </g>
           </svg>
         </div>
-        <footer class="header animated dur06 blurred" style="z-index:2">
 
-          <p class="slide">Let's build something great togther.</p>
+        <footer class="header animated dur06 blurred2" style="z-index:2">
 
-          <div class="slide graphic">
-            <svg class="image header animated blurred dur06" xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" viewBox="0 0 706.1 706.1"
-              fill="#DDE6E8">
-              <g>
-                <path
-                  d="M353.05 0c69.02,0 124.97,55.95 124.97,124.97 0,60.82 -43.88,112.89 -103.67,123.15l0 89.24 138.46 100.6c19.64,-12.85 43.11,-20.32 68.32,-20.32 69.02,0 124.97,55.96 124.97,124.97 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-28.16 9.31,-54.15 25.04,-75.05l-128.16 -93.11 -128.15 93.11c15.72,20.9 25.04,46.89 25.04,75.05 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-69.01 55.95,-124.97 124.96,-124.97 25.22,0 48.69,7.47 68.32,20.32l138.47 -100.6 0 -89.24c-59.8,-10.26 -103.67,-62.33 -103.67,-123.15 0,-69.02 55.95,-124.97 124.96,-124.97z" />
-              </g>
-            </svg>
-          </div>
+          <p class="slide2">Let's build something great togther.</p>
 
-          <a class="slide mail" href="mailto:erik@mattheis.org">erik@mattheis.org</a>
-          <div class="slide">Saint Paul, MN</div>
+          <a class="slide2 mail" href="mailto:erik@mattheis.org">erik@mattheis.org</a>
+          <div class="slide2">Saint Paul, MN</div>
         </footer>
       </div>
     </div>
   </div>
 
-
-  <script type="module" src="/main.js">
-  </script>
+  <script type="module" src="/main.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEP8V7LPC9"></script>
   <script>
@@ -281,7 +287,6 @@
     gtag('approach', new Date());
     gtag('config', 'G-ZEP8V7LPC9');
   </script>
-
 
 </body>
 
